# lifedigital

./: .gitignore  .lintstagedrc.json  Makefile  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.claude/: CLAUDE.md  settings.local.json
apps/mobile/: .npmrc  App.tsx  app.config.ts  app.json  babel.config.js  eas.json  jest.config.js  jest.setup.js  metro.config.js  package.json  tamagui.config.ts  tsconfig.json
apps/mobile/scripts/: create-assets.js
apps/mobile/src/lib/: queryClient.ts
apps/mobile/src/navigation/: AppTabs.tsx  AuthStack.tsx  DashboardStack.tsx  DocumentosStack.tsx  MargemStack.tsx  PerfilStack.tsx  RootNavigator.tsx  index.tsx
apps/mobile/src/screens/: AjudaSuporte.tsx  DadosPessoais.tsx  Dashboard.tsx  DetalhesMargem.tsx  DetalhesSimulacao.tsx  EnviarDocumento.tsx  Historico.tsx  Index.tsx  MeusDocumentos.tsx  NotFound.tsx  Notificacoes.tsx  NovaSimulacao.tsx  Perfil.tsx  SegurancaPrivacidade.tsx  Welcome.tsx  index.ts
docs/: ADR-2025-Stack.md  API-SERVICES.md  AUDITORIA-CORRECOES.md  COMPONENTES-IMPLEMENTADOS.md  CONTRIBUTING.md  FASE1-PROGRESSO.md  PAGINAS-IMPLEMENTADAS.md  PROGRESSO-FINAL.md  PROXIMOS-PASSOS.md  RESUMO-ATUAL.md  SESSAO-23-10-2025.md  STATUS-REAL-OUTUBRO-2025.md  TAMAGUI-SETUP-REFERENCE.md  TANSTACK-QUERY-SETUP.md
infra/docker/: compose.yml
services/api/: Dockerfile  pyproject.toml
services/api/app/: main.py
services/api/app/api/: __init__.py
services/api/app/api/routes/: auth.py  events.py  margin.py  profile.py  simulations.py  uploads.py  webhooks.py
(+21 files in other folders)
