[project]
name = "lifedigital-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "redis>=5.0",
  "celery[redis]>=5.3",
  "python-multipart>=0.0.9",
  "google-auth>=2.29",
  "python-jose[cryptography]>=3.3",
  "tenacity>=9.0",
  "minio>=7.2",
  "orjson>=3.10"
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8080
